--- a/client/partials/users.html
+++ b/client/partials/users.html
@@ -33,25 +33,6 @@
     <div id="breadcrumb"> <a href="admin#/dashboard" title="Go to Home" class="tip-bottom"><i class="icon-home"></i> Home</a></div>
   </div>
 <!--End-breadcrumbs-->
-<!-- <div class="row-fluid">
-      <div class="span6">
-        <div class="widget-box">
-          <div class="widget-title bg_lo"  data-toggle="collapse" href="#collapseG3" > <span class="icon"> <i class="icon-chevron-down"></i> </span>
-            <h5>News updates</h5>
-          </div>
-          <div class="widget-content nopadding updates collapse in" id="collapseG3">
-            <div class="new-update clearfix"><i class="icon-ok-sign"></i>
-              <div class="update-done"><a title="" href="#"><strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</strong></a> <span>dolor sit amet, consectetur adipiscing eli</span> </div>
-              <div class="update-date"><span class="update-day">20</span>jan</div>
-            </div>
-            <div class="new-update clearfix"> <i class="icon-gift"></i> <span class="update-notice"> <a title="" href="#"><strong>Congratulation Maruti, Happy Birthday </strong></a> <span>many many happy returns of the day</span> </span> <span class="update-date"><span class="update-day">11</span>jan</span> </div>
-            <div class="new-update clearfix"> <i class="icon-move"></i> <span class="update-alert"> <a title="" href="#"><strong>Maruti is a Responsive Admin theme</strong></a> <span>But already everything was solved. It will ...</span> </span> <span class="update-date"><span class="update-day">07</span>Jan</span> </div>
-            <div class="new-update clearfix"> <i class="icon-leaf"></i> <span class="update-done"> <a title="" href="#"><strong>Envato approved Maruti Admin template</strong></a> <span>i am very happy to approved by TF</span> </span> <span class="update-date"><span class="update-day">05</span>jan</span> </div>
-            <div class="new-update clearfix"> <i class="icon-question-sign"></i> <span class="update-notice"> <a title="" href="#"><strong>I am alwayse here if you have any question</strong></a> <span>we glad that you choose our template</span> </span> <span class="update-date"><span class="update-day">01</span>jan</span> </div>
-          </div>
-        </div>
-      </div>
-</div> -->
  <div class="row-fluid">
       <div class="span12">
         <div class="widget-box">
@@ -70,8 +51,8 @@
               <tbody>
                 <tr class="odd gradeX" ng-repeat='user in user_list'>
                   <td ng-bind='user.username'></td>
-                  <td ng-bind='user.password'></td>
-                  <td><button class='btn-warning btn-mini' ng-click='toUpdatePage(user._id)'>Update</button> &nbsp <button class='btn-danger btn-mini' ng-click=''>Delete</button></td>
+                  <td ng-bind='user.createdAt'></td>
+                  <td><button class='btn-warning btn-mini' ng-click='toUpdatePage(user._id)'>Update</button> &nbsp <button class='btn-danger btn-mini' ng-click='deleteUser(user._id)'>Delete</button></td>
                 </tr>
               </tbody>
             </table>
