--- a/client/partials/admin/editProp.html
+++ b/client/partials/admin/editProp.html
@@ -55,14 +55,14 @@
                   <div class="controls">
                     <select ng-model='newProp.district'>
                       <option value='' selected>Select Portfolio</option>
-                      <option value='pasadena'>Pasadena/Inland Empire West</option>
-                      <option value='inland'>Inland Empire</option>
-                      <option value='south_bay'>South Bay</option>
-                      <option value='long_beach'>Long Beach</option>
-                      <option value='oc_north'>Orange County North</option>
-                      <option value='oc'>Orange County</option>
-                      <option value='oc_south'>Orange County South</option>
-                      <option value='senior'>Senior Living and Apartments</option>
+                      <option value='Pasadena & Inland Empire West'>Pasadena/Inland Empire West</option>
+                      <option value='Inland Empire'>Inland Empire</option>
+                      <option value='South Bay'>South Bay</option>
+                      <option value='Long Beach'>Long Beach</option>
+                      <option value='Orange County North'>Orange County North</option>
+                      <option value='Orange County'>Orange County</option>
+                      <option value='Orange County South'>Orange County South</option>
+                      <option value='Senior Living and Apartments'>Senior Living and Apartments</option>
                     </select>
                   </div>
                 </div>
