finshed CRUD for Prop and refactored $scope

--- a/client/partials/admin/newProp.html
+++ b/client/partials/admin/newProp.html
@@ -43,7 +43,7 @@
               <h5 ng-bind='title'></h5>
             </div>
             <div class="widget-content nopadding">
-              <form ng-submit="createProp()" class="form-horizontal">
+              <form ng-submit="function()" class="form-horizontal">
                 <div class="control-group">
                   <label class="control-label">Property Name: </label>
                   <div class="controls">
