district page logistics

--- a/client/partials/admin/properties.html
+++ b/client/partials/admin/properties.html
@@ -69,7 +69,7 @@
               </table>
             </div>
           </div>
-          <button class='btn-success btn-mini prop-btn' ng-click='toAddProp()'> <a href="admin#/properties/new">Add New Entry</a></button>
+          <button class='btn-success btn-mini prop-btn' ng-click='toNewProp()'>Add New Entry</a></button>
         </div>
       </div>
     </div>
