--- a/client/partials/districts/districtInfo.html
+++ b/client/partials/districts/districtInfo.html
@@ -1,6 +1,8 @@
-<h1>hello</h1>
-<h1>hello</h1>
-<h1>hello</h1>
-<h1>hello</h1>
-<h1>hello</h1>
-<h1>hello</h1>
+<div ng-controller ='propertyController'>
+	<h1>hello</h1>
+	<h1>hello</h1>
+	<h1>hello</h1>
+	<h1>hello</h1>
+	<h1>hello</h1>
+	<h1>hello</h1>
+</div>
