--- a/client/partials/admin/newProp.html
+++ b/client/partials/admin/newProp.html
@@ -79,6 +79,12 @@
                   </div>
                 </div>
                 <div class="control-group">
+                  <label class="control-label">City, State, and Zip:</label>
+                  <div class="controls">
+                    <input type="text" class="span11" ng-model='newProp.city' placeholder="City, State, and Zip"/>
+                  </div>
+                </div>
+                <div class="control-group">
                   <label class="control-label">Manager:</label>
                   <div class="controls">
                     <input type="text" class="span11" ng-model='newProp.manager' placeholder="Manager Name"/>
