--- a/client/partials/admin/newProp.html
+++ b/client/partials/admin/newProp.html
@@ -105,7 +105,7 @@
                 <div class="control-group">
                   <label class="control-label">Description (Optional): </label>
                   <div class="controls">
-                    <textarea ng-model='newProp.desc' class='span11' rows='5'></textarea>
+                    <textarea ng-model='newProp.desc' class='span11' rows='5' placeholder="Description..."></textarea>
                   </div>
                 </div>
                 <div class="form-actions">
